added MinIO and some unit tests, fixed bugs, user can edit their found items